kubectl/short-api-deployment.yml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: short-api-deployment
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: short-api
    template:
      metadata:
        labels:
          app: short-api
      spec:
        containers:
        - name: short-api
          image: antonlarichev/short-api:v1.0
          resources:
            limits:
              memory: "500Mi"
              cpu: "200m"
          ports:
          - containerPort: 3000
