kubectl/short-app-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: short-app
  labels:
    app: short-app
spec:
  containers:
  - name: short-app
    image: antonlarichev/short-app
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
