kubectl/conv-app-node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-app-port
spec:
  type: NodePort
  selector:
    app: conv-app
  ports:
  - port: 3000
    targetPort: 80
    nodePort: 31200
