kubectl/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-clusterip
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    protocol: TCP
