kubectl/short-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: short-api-clusterip
spec:
  selector:
    app: short-api
  ports:
  - port: 3000
    protocol: TCP
