kubectl/short-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: short-app-clusterip
spec:
  selector:
    app: short-app
  ports:
  - port: 80
    protocol: TCP
